rust_test_framework/tests/compile_tests/should_fail/invalid_json_string.stderr
error: Could not parse JSON: key must be a string at line 1 column 3
 --> tests/compile_tests/should_fail/invalid_json_string.rs:3:22
  |
3 | #[test_params_source(JsonString("{ invalid json }", i32))]
  |                      ^^^^^^^^^^
